# rustmap

./: .env  .env.example  .gitignore  Cargo.toml  README.md  additional.sql  borders.yaml  country-names.geojson  country-names.qmd  country-names.sql  geonames.qmd  geonames.sql  land-polygons.sql  layers.md  mapping.yaml  maprender-fonts.conf  osm2pgsql.lua  stress.ts
crates/core/: Cargo.toml
crates/core/src/: collision.rs  colors.rs  ctx.rs  lib.rs  projectable.rs  re_replacer.rs  size.rs  svg_cache.rs
crates/core/src/draw/: create_pango_layout.rs  draw.rs  hatch.rs  line_pattern.rs  mod.rs  offset_line.rs  path_geom.rs  smooth_line.rs  text.rs  text_on_line.rs
crates/core/src/layers/: aerialway_names.rs  aerialways.rs  aeroways.rs  barrierways.rs  blur_edges.rs  borders.rs  bridge_areas.rs  building_names.rs  buildings.rs  contours.rs  country_names.rs  cutlines.rs  embankments.rs  feature_lines.rs  feature_lines_maskable.rs  features.rs  fixmes.rs  geonames.rs  highway_names.rs  hillshading.rs  hillshading_datasets.rs  housenumbers.rs  landcover_names.rs  landuse.rs  locality_names.rs  military_areas.rs  mod.rs  national_park_names.rs  pipelines.rs  place_names.rs  power_lines.rs  protected_area_names.rs  protected_areas.rs  road_access_restrictions.rs  roads.rs  routes.rs  sea.rs  shading_and_contours.rs  solar_power_plants.rs  trees.rs  (+5 more)
crates/http/: Cargo.toml
crates/http/src/: main.rs
crates/node/: index.d.ts  package.json  pnpm-lock.yaml
crates/node/src/: lib.rs
mapserver/: .gitignore  README.md  jsconfig.json  mapping.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
mapserver/config/: default.json5  development.json5  fm5-ondemand.json5  fm5-prerender.json5  fm5-shared.json5
mapserver/lib/: config.ts  configSchema.ts  dirtyTilesRegister.ts  dirtyTilesScanner.ts  dirtyTilesSortWorker.ts  expireFilesProcessor.ts  httpServer.ts  index.ts  legend.ts  outOfBoundsCleaner.ts  prerenderer.ts  renderWorker.ts  renderedPool.ts  renderer.ts  tileCalc.ts  types.ts
rust/: Cargo.toml
rust/crates/core/: Cargo.toml
rust/crates/core/src/: collision.rs  colors.rs  ctx.rs  geojson_utils.rs  image_format.rs  layer_render_error.rs  lib.rs  projectable.rs  regex_replacer.rs  render.rs  render_request.rs  svg_cache.rs  svg_repo.rs  xyz.rs
rust/crates/core/src/draw/: create_pango_layout.rs  hatch.rs  line_pattern.rs  markers_on_path.rs  mod.rs  offset_line.rs  path_geom.rs  text.rs  text_on_line.rs
rust/crates/core/src/layers/: aerialway_names.rs  aerialways.rs  aeroways.rs  barrierways.rs  blur_edges.rs  borders.rs  bridge_areas.rs  building_names.rs  buildings.rs  contours.rs  country_names.rs  custom.rs  cutlines.rs  embankments.rs  feature_lines.rs  feature_lines_maskable.rs  features.rs  fixmes.rs  geonames.rs  highway_names.rs  hillshading.rs  hillshading_datasets.rs  housenumbers.rs  landcover_names.rs  landuse.rs  locality_names.rs  military_areas.rs  mod.rs  national_park_names.rs  pipelines.rs  place_names.rs  power_lines.rs  protected_area_names.rs  protected_areas.rs  road_access_restrictions.rs  roads.rs  routes.rs  sea.rs  shading_and_contours.rs  solar_power_plants.rs  (+8 more)
rust/crates/http/: Cargo.toml
rust/crates/http/src/: cli.rs  export.rs  index_paths.rs  main.rs  render_worker_pool.rs  service.rs  service_capabilities.xml  tile_invalidation.rs  tiles.rs
rust/crates/node/: .gitignore  Cargo.toml  index.d.ts  index.js  package.json  pnpm-lock.yaml
rust/crates/node/src/: lib.rs
sql/: additional.sql  route_gen_workaround.sql
src/: aerialways.rs  barrierways.rs  bbox.rs  borders.rs  bounding_box.rs  bridge_areas.rs  buildings.rs  cache.rs  collision.rs  colors.rs  contours.rs  ctx.rs  draw.rs  hatch.rs  hatcher.rs  hillshading.rs  landuse.rs  line_pattern.rs  main.rs  military_areas.rs  point.rs  pois.rs  power_lines.rs  projectable.rs  protected_areas.rs  roads.rs  routes.rs  size.rs  svg_cache.rs  trees.rs  water_areas.rs  water_lines.rs  xyz.rs
src/draw/: cairotwisted.rs  create_pango_layout.rs  draw.rs  hatch.rs  line_pattern.rs  markers_on_path.rs  mod.rs  offset_line.rs  smooth_line.rs  text.rs  text_on_line.rs  text_on_path.rs
src/layers/: aerialway_names.rs  aerialways.rs  aeroways.rs  barrierways.rs  borders.rs  bridge_areas.rs  building_names.rs  buildings.rs  contours.rs  country_names.rs  cutlines.rs  feature_lines.rs  features.rs  highway_names.rs  hillshading.rs  housenumbers.rs  landuse.rs  locality_names.rs  military_areas.rs  mod.rs  pipelines.rs  place_names.rs  power_lines.rs  protected_area_names.rs  protected_areas.rs  road_access_restrictions.rs  roads.rs  routes.rs  shading_and_contours.rs  solar_power_plants.rs  trees.rs  water_area_names.rs  water_areas.rs  water_line_names.rs  water_lines.rs
types/: osm2pgsql.lua
