[package]
name = "maprender"
version = "0.1.0"
edition = "2021"

[features]
test_feature = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.2"
cairo-rs = { version = "0.19.2", features = ["png", "svg"] }
cavalier_contours = { version = "0.4.0" }
colorsys = "0.6.7"
gdal = { version = "0.16.0", features = ["bindgen"] }
lazy_static = "1.4.0"
librsvg = { version = " 2.58.0", features = ["c-api"] }
oxhttp = { version = "0.2.0" }
pangocairo = "0.19.2"
postgis = "0.9.0"
postgres = "0.19.7"
r2d2 = "0.8.10"
r2d2_postgres = "0.18.1"
regex = "1.10.2"
