[package]
name = "maprender"
version = "0.1.0"
edition = "2021"

[features]
test_feature = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.6"
cairo-rs = { version = "0.20", features = ["png", "svg"] }
cavalier_contours = { version = "0.4.0" }
colorsys = "0.6"
gdal = { version = "0.17", features = ["bindgen"] }
librsvg = { version = "2.59.0-beta.4" }
oxhttp = { version = "0.2" }
pangocairo = "0.20"
postgis = "0.9"
postgres = "0.19"
r2d2 = "0.8"
r2d2_postgres = "0.18"
regex = "1.10"
swash = "0.1"
