[package]
name = "maprender"
version = "0.1.0"
edition = "2024"

[features]
test_feature = []

[dependencies]
bitflags = "2.9"
cairo-rs = { version = "0.21", features = ["png", "svg"] }
cavalier_contours = { version = "0.6.0" }
colorsys = "0.7"
gdal = { git = "https://github.com/georust/gdal.git", features = ["bindgen"] }
librsvg = { version = "2.61" }
oxhttp = { version = "0.3" }
pangocairo = "0.21"
postgis = "0.9"
postgres = "0.19"
r2d2 = "0.8"
r2d2_postgres = "0.18"
regex = "1.11"
tracy-client = "0.18.3"
