[workspace]
resolver = "2"
members = ["crates/core", "crates/http", "crates/node"]

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
bitflags = "2.9"
cairo-rs = { version = "0.21", features = ["png", "svg", "pdf"] }
cavalier_contours = { version = "0.6.0" }
colorsys = "0.7"
gdal = { git = "https://github.com/georust/gdal.git", features = ["bindgen"] }
geo = { version = "0.30.0", features = ["use-proj"] }
geo-postgis = "0.2.2"
geojson = "0.24"
librsvg = { version = "2.61" }
oxhttp = { version = "0.3" }
pangocairo = "0.21"
postgis = "0.9"
postgres = "0.19"
proj = { version = "0.29", features = ["geo-types"] }
r2d2 = "0.8"
r2d2_postgres = "0.18"
regex = "1.11"
serde_json = "1.0"
tracy-client = "0.18.3"
napi = "3.7"
napi-derive = "3.4"
image = { version = "0.25", default-features = false, features = [
    "jpeg",
    "png",
] }
