[workspace]
resolver = "2"
members = ["crates/core", "crates/http", "crates/node"]

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
gdal = { version = "0.19", features = ["bindgen"] }
geo = { version = "0.30.0", features = ["use-proj"] }
geojson = "0.24"
postgres = "0.19"
r2d2 = "0.8"
r2d2_postgres = "0.18"
regex = "1.11"
serde_json = "1.0.149"
tracy-client = "0.18.4"
napi = "3.8.1"
napi-derive = "3.5.0"
thiserror = "2.0.17"
