[package]
name = "maprender-core"
version = "0.1.0"
edition = "2024"
publish = false

[features]
test_feature = []

[lib]
name = "maprender_core"
path = "src/lib.rs"

[dependencies]
image = { version = "0.25", default-features = false, features = [
  "jpeg",
  "png",
] }
librsvg = { version = "2.61" }
bitflags = "2.9"
cairo-rs = { version = "0.21", features = ["png", "svg", "pdf"] }
cavalier_contours = { version = "0.7.0" }
colorsys = "0.7"
gdal = { workspace = true }
geo = { workspace = true }
geo-postgis = "0.2.2"
geojson = { workspace = true }
pangocairo = "0.21"
postgis = "0.9"
postgres = { workspace = true }
proj = { version = "0.29", features = ["geo-types"] }
regex = { workspace = true }
serde_json = { workspace = true }
tracy-client = { workspace = true }
napi = { workspace = true }
napi-derive = { workspace = true }
thiserror = { workspace = true }
gio = "0.21.5"
xmltree = "0.12.0"
