[package]
name = "maprender-node"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "maprender_node"
crate-type = ["cdylib"]

[dependencies]
maprender-core = { path = "../core" }
napi = { workspace = true }
napi-derive = { workspace = true }
postgres = { workspace = true }
regex = { workspace = true }
geo = { workspace = true }
gdal = { workspace = true }
geojson = { workspace = true }
serde_json = { workspace = true }
